--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "2amigos/yii2-date-time-picker-widget": "~1.0",
 	"russ666/yii2-countdown": "*",
         "ruskid/yii2-csv-importer": "dev-master",
-        "scotthuangzl/yii2-google-chart": "dev-master"
+        "scotthuangzl/yii2-google-chart": "dev-master",
+        "2amigos/yii2-ckeditor-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
