question shuffling is working

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 	"russ666/yii2-countdown": "*",
         "ruskid/yii2-csv-importer": "dev-master",
         "scotthuangzl/yii2-google-chart": "dev-master",
-        "2amigos/yii2-ckeditor-widget": "~1.0"
+        "2amigos/yii2-ckeditor-widget": "~1.0",
+        "mihaildev/yii2-ckeditor": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
